2013-09-06  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Fix a couple of memory leaks.

	* misc/pcap.c (v6_getinterfaces): Call freeifaddrs if getifaddrs call
	succeeds.

	* misc/plugutils.c (plug_set_replace_key): Free str when soc is null
	too.

	* nasl/nasl_host.c (get_host_ip): Use the already duplicated txt_ip
	instead of duplicating it again.

2013-09-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/test-hosts.c: New. A stand-alone test tool for module
	openvas_hosts. Developed by Hani Benhabiles.

	* base/CMakeLists.txt: Add handling for test-hosts.c.

2013-09-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* doc/Doxyfile.in: Removed handling of module hg.

2013-09-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* hg/: Removed.

2013-09-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Remove unused hg/ module.

	* hg/hg_filter.h, hg/hg_subnet.c,
	hg/hg_utils.c, hg/test.c,
	hg/hosts_gatherer.c, hg/hg_dns_axfr.c,
	hg/hg_subnet.h, hg/hg_utils.h,
	hg/hg_add_hosts.c, hg/hosts_gatherer.h,
	hg/hg_dns_axfr.h, hg/README.txt,
	hg/hg_add_hosts.h, hg/CMakeLists.txt,
	hg/hg_filter.c, hg/hg_debug.c: Removed.

	* COPYING: Remove hg license information.

	* nasl/CMakeLists, CMakeLists, libopenvas.pc.in: Remove hg directory and
	library related entries.

2013-09-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Add CIDR IPv6 ranges support.

	* base/openvas_hosts.c (cidr_block_ips): Detail documentation.
	(is_cidr6_block, cidr6_get_block, cidr6_get_ip, cidr6_block_ips): New
	functions.
	(determine_host_type): Check for IPv6 CIDR-blocks syntax.
	(openvas_hoss_remove_duplicates): Fix duplicates count substraction.
	(openvas_hosts_new): Handle adding single hosts for CIDR IPv6 blocks.

	* base/openvas_hosts.h: Add HOST_TYPE_CIDR6_BLOCK value.

2013-09-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Cache openvas_hosts count, instead of counting host objects each time.
