@@ -1,3 +1,7 @@
+2013-09-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* misc/resolve.c (host2ip): Removed. It is an unused function.
+
 2013-09-06  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	Fix a couple of memory leaks.
